styles: ligare web project added. Image size optimization

--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
                         <h6 class="section_subtitle">a little things about me</h6>
                         <p>Hello!</p>
                         <p>I'm <span>Endurance Ekhoragbon.</span> You can call me <span>Eddie.</span></p>
-                        <p>I'm design and code interface for web and mobile with more than 3 years of experience and a
+                        <p>I design and code interface for web and mobile with more than 3 years of experience and a
                             wide range of skills in the industry.
                             <br>(FinTech, Music, Gaming and Socials)</p>
 
                         <div class="space-20"></div>
 
                         <!-- CV download button -->
-                        <a class="qrop_btn" href="#">Download CV</a>
+                        <a class="qrop_btn" href="img/Endurance's%20Resume.pdf" download>Download CV</a>
                     </div>
                     <!-- end of about info -->
 
@@ -168,7 +168,7 @@
                         </div>
                         <div class="col-md-4 col-sm-6 wow fadeIn" data-wow-delay=".25s">
                             <div class="experience_single sm-mt-30">
-                                <h4>Tunga, DevCenter, Platohub</h4>
+                                <h4>Tunga and DevCenter</h4>
                                 <p>U.I/U.X Designer and Developer</p>
                                 <p>2015 - Now</p>
                                 <p>Remote</p>
@@ -334,40 +334,30 @@
                         <div class="service_item wow fadeIn" data-wow-delay=".05s">
                             <span class="service_icon mbri-responsive"></span>
                             <h4>Web Design</h4>
-                            <p>Ronsectetur adipisicing elit ffic dolor infobus vero exercit atione ametom cque quae.</p>
+                            <p>Designing and developing websites that fit into various screen sizes for best experience.</p>
                         </div>
 
                         <!-- service single item -->
                         <div class="service_item wow fadeIn" data-wow-delay=".15s">
                             <span class="service_icon mbri-cursor-click"></span>
                             <h4>UI/UX Design</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit Quas vero exercit atione
-                                amet.</p>
+                            <p>Wireframing, creating high fidelity mockup for mobile and web applications.</p>
                         </div>
 
                         <!-- service single item -->
                         <div class="service_item wow fadeIn" data-wow-delay=".25s">
-                            <span class="service_icon mbri-website-theme"></span>
-                            <h4>Visual Design</h4>
-                            <p>Cosectetur adipisicing elit ffic dolor infobus vero exercit atione ametom cumque
-                                quae.</p>
+                            <span class="service_icon mbri-code"></span>
+                            <h4>U.I Development</h4>
+                            <p>Coding interfaces for mobile and web applications, using HTML/CSS, React.js, React Native, Ionic..</p>
                         </div>
 
                         <!-- service single item -->
-                        <div class="service_item">
-                            <span class="service_icon mbri-protect"></span>
-                            <h4>Problem Solving</h4>
-                            <p>Atanp ipsum dolor sit amet consectetur adipisicing elit Quas vero exercit atione
-                                amet.</p>
-                        </div>
-
-                        <!-- service single item -->
-                        <div class="service_item">
+                        <div class="service_item wow fadeIn" data-wow-delay=".25s">
                             <span class="service_icon mbri-contact-form"></span>
-                            <h4>Content Writing</h4>
-                            <p>Cosectetur adipisicing elit ffic dolor infobus vero exercit atione ametom cumque
-                                quae.</p>
+                            <h4>U.X Research</h4>
+                            <p>User Stories, personas, and problem solving approaches to product development.</p>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -401,7 +391,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-6 develop">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="" href="img/work_01.jpg">
+                                    <a class="" href="projects/ligare_web_app.html">
                                         <img class="img-fluid" src="img/projects/ligare-dashboard/ligare-webapp.png" alt="">
                                     </a>
                                 </div>
@@ -525,19 +515,19 @@
                         </div>
 
                         <!-- work single item -->
-                        <div class="col-lg-4 col-md-6 col-sm-6 design">
-                            <div class="work_single_item">
-                                <div class="work_image">
-                                    <a class="zoom_image" href="img/work_09.jpg">
-                                        <img class="img-fluid" src="img/projects/emoco/emoco-preview.png" alt="">
-                                    </a>
-                                </div>
-                                <div class="work_item_info">
-                                    <h4>Emoco <br> Portfolio Site</h4>
-                                    <p>design</p>
-                                </div>
-                            </div>
-                        </div>
+<!--                        <div class="col-lg-4 col-md-6 col-sm-6 design">-->
+<!--                            <div class="work_single_item">-->
+<!--                                <div class="work_image">-->
+<!--                                    <a class="zoom_image" href="img/work_09.jpg">-->
+<!--                                        <img class="img-fluid" src="img/projects/emoco/emoco-preview.png" alt="">-->
+<!--                                    </a>-->
+<!--                                </div>-->
+<!--                                <div class="work_item_info">-->
+<!--                                    <h4>Emoco <br> Portfolio Site</h4>-->
+<!--                                    <p>design</p>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
@@ -556,59 +546,60 @@
                     </h2>
                 </div>
                 <div class="col-md-9">
-                    <div class="row">
-                        <!-- blog single item -->
-                        <div class="col-md-4 wow fadeIn" data-wow-delay=".05s">
-                            <div class="blog_item">
-                                <div class="blog_img">
-                                    <img class="img-fluid" src="img/blog_01.jpg" alt="">
-                                </div>
-                                <div class="blog_item_info">
-                                    <h4>Lorem sit amet consec tetur adipisi cinge.</h4>
-                                    <p>A ignismos veniam nihil conse quatur sit moltia maiores sint.</p>
-                                    <a href="blog_single.html">Read More</a>
-                                </div>
-                            </div>
-                        </div>
+                    <img class="img-fluid" src="img/coming-soon.png" alt="">
+<!--                    <div class="row">-->
+<!--                        &lt;!&ndash; blog single item &ndash;&gt;-->
+<!--                        <div class="col-md-4 wow fadeIn" data-wow-delay=".05s">-->
+<!--                            <div class="blog_item">-->
+<!--                                <div class="blog_img">-->
+<!--                                    <img class="img-fluid" src="img/blog_01.jpg" alt="">-->
+<!--                                </div>-->
+<!--                                <div class="blog_item_info">-->
+<!--                                    <h4>Lorem sit amet consec tetur adipisi cinge.</h4>-->
+<!--                                    <p>A ignismos veniam nihil conse quatur sit moltia maiores sint.</p>-->
+<!--                                    <a href="blog_single.html">Read More</a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
 
-                        <!-- blog single item -->
-                        <div class="col-md-4 wow fadeIn" data-wow-delay=".15s">
-                            <div class="blog_item sm-mt-30">
-                                <div class="blog_img">
-                                    <img class="img-fluid" src="img/blog_02.jpg" alt="">
-                                </div>
-                                <div class="blog_item_info">
-                                    <h4>Pagni oerspin ciatinse veniet elid bendi.</h4>
-                                    <p>It's a nissimos ectetur adipisi cinge mollitia maiores sint.</p>
-                                    <a href="blog_single.html">Read More</a>
-                                </div>
-                            </div>
-                        </div>
+<!--                        &lt;!&ndash; blog single item &ndash;&gt;-->
+<!--                        <div class="col-md-4 wow fadeIn" data-wow-delay=".15s">-->
+<!--                            <div class="blog_item sm-mt-30">-->
+<!--                                <div class="blog_img">-->
+<!--                                    <img class="img-fluid" src="img/blog_02.jpg" alt="">-->
+<!--                                </div>-->
+<!--                                <div class="blog_item_info">-->
+<!--                                    <h4>Pagni oerspin ciatinse veniet elid bendi.</h4>-->
+<!--                                    <p>It's a nissimos ectetur adipisi cinge mollitia maiores sint.</p>-->
+<!--                                    <a href="blog_single.html">Read More</a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
 
-                        <!-- blog single item -->
-                        <div class="col-md-4 wow fadeIn" data-wow-delay=".25s">
-                            <div class="blog_item sm-mt-30">
-                                <div class="blog_img">
-                                    <img class="img-fluid" src="img/blog_03.jpg" alt="">
-                                </div>
-                                <div class="blog_item_info">
-                                    <h4>Necessitati sit busaneo voluptas amit auto.</h4>
-                                    <p>It is gsimos veniam nihil conse quatur sit mollitia maies sint.</p>
-                                    <a href="blog_single.html">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col wow fadeIn" data-wow-delay=".05s">
+<!--                        &lt;!&ndash; blog single item &ndash;&gt;-->
+<!--                        <div class="col-md-4 wow fadeIn" data-wow-delay=".25s">-->
+<!--                            <div class="blog_item sm-mt-30">-->
+<!--                                <div class="blog_img">-->
+<!--                                    <img class="img-fluid" src="img/blog_03.jpg" alt="">-->
+<!--                                </div>-->
+<!--                                <div class="blog_item_info">-->
+<!--                                    <h4>Necessitati sit busaneo voluptas amit auto.</h4>-->
+<!--                                    <p>It is gsimos veniam nihil conse quatur sit mollitia maies sint.</p>-->
+<!--                                    <a href="blog_single.html">Read More</a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="row">-->
+<!--                        <div class="col wow fadeIn" data-wow-delay=".05s">-->
 
-                            <div class="space-30"></div>
+<!--                            <div class="space-30"></div>-->
 
-                            <!-- View All Blogs button -->
-                            <a class="qrop_btn" href="all_blogs.html">View All Blogs</a>
-                        </div>
-                    </div>
-                </div>
+<!--                            &lt;!&ndash; View All Blogs button &ndash;&gt;-->
+<!--                            <a class="qrop_btn" href="all_blogs.html">View All Blogs</a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </div>
     </div>
@@ -620,7 +611,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <h2 class="section_title">
-                        <span class="reveal-trigger">Cilents</span><br>
+                        <span class="reveal-trigger">Clients</span><br>
                         <span class="reveal-trigger">Review</span>
                     </h2>
                 </div>
@@ -631,19 +622,10 @@
                 <div class="col-md-6 wow fadeIn" data-wow-delay=".15s">
                     <div class="owl-carousel testimonial_carousel">
                         <div class="testimonial_item">
-                            <h5>Atque minima voluptate animi provident adipisci laudantium magni harum nulla.
-                                Consequuntur architecto aliquid distinctio doloribus molestiae facere dolorum.</h5>
-                            <p>Will Marvin <span>(Opticon Limited)</span></p>
-                        </div>
-                        <div class="testimonial_item">
-                            <h5>Porro debitis nostrum cum hic nam, expedita velit atque voluptates placeat doloribus
-                                voluptatem. Suscipit facere excepturi in vitae quibusdam iusto dolores ipsa!</h5>
-                            <p>Reta Schmidt <span>(Alive Tech)</span></p>
-                        </div>
-                        <div class="testimonial_item">
-                            <h5>Necessitatibus assumenda nemo porro. Soluta hic officiis nihil deserunt quae autem vero
-                                sapiente id? Aperiam est ducimus totam facilis excepturi dolorem perferendis.</h5>
-                            <p>Zander Rohan <span>(Tinmest Tech)</span></p>
+                            <h5>
+                                "Eddieos takes to heart the need of end users and at the same time does his best to interpret what the client provides to deliver meaningful UX designs"
+                            </h5>
+                            <p>Elijah Atuhaire <span>(Project Manager Tunga)</span></p>
                         </div>
                     </div>
                 </div>
