--- a/projects/crusader_sterling.html
+++ b/projects/crusader_sterling.html
@@ -105,7 +105,7 @@
                                 Application</strong> to
                                 serve their iOS and Android customers a good pension experience. There was an existing
                                 software working on just the Android platform, so there was a need to build a new app
-                                that supports both iOS
+                                that supports both iOS and Android.
                             </p>
                         </div>
                     </div>
@@ -212,7 +212,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="section_title">
-                        <span class="reveal-trigger">Cilent's</span><br>
+                        <span class="reveal-trigger">Client's</span><br>
                         <span class="reveal-trigger">Testimonial</span>
                     </h2>
                 </div>
@@ -223,7 +223,7 @@
                             <div>
                                 <h5>Atque minima voluptate animi provident adipisci laudantium magni harum nulla.
                                     Consequuntur architecto aliquid distinctio doloribus molestiae facere dolorum.</h5>
-                                <p>Will Marvin <span>(Opticon Limited)</span></p>
+                                <p>David <span>(GlossKode Tech Solutions)</span></p>
                             </div>
                             <p class="testimonial_quote mbri-quote-right"></p>
 
