--- a/projects/ligare_web.html
+++ b/projects/ligare_web.html
@@ -158,7 +158,7 @@
                                 <h5>Status</h5>
                                 <p>Completed</p>
                                 <p>
-                                    <a href="https://ligare-web.herokuapp.com" target="_blank"
+                                    <a href="https://www.ligareapp.com/" target="_blank"
                                        class="btn btn-info"><span class="mbri-globe"></span></a>
                                 </p>
                             </div>
@@ -202,7 +202,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="section_title">
-                        <span class="reveal-trigger">Cilent's</span><br>
+                        <span class="reveal-trigger">Client's</span><br>
                         <span class="reveal-trigger">Testimonial</span>
                     </h2>
                 </div>
@@ -213,7 +213,7 @@
                             <div>
                                 <h5>Atque minima voluptate animi provident adipisci laudantium magni harum nulla.
                                     Consequuntur architecto aliquid distinctio doloribus molestiae facere dolorum.</h5>
-                                <p>Will Marvin <span>(Opticon Limited)</span></p>
+                                <p>Akinfals <span>(DevCenter)</span></p>
                             </div>
                             <p class="testimonial_quote mbri-quote-right"></p>
 
