--- a/projects/project_template_1.html
+++ b/projects/project_template_1.html
@@ -203,7 +203,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="section_title">
-                        <span class="reveal-trigger">Cilent's</span><br>
+                        <span class="reveal-trigger">Client's</span><br>
                         <span class="reveal-trigger">Testimonial</span>
                     </h2>
                 </div>
