--- a/index-dark.html
+++ b/index-dark.html
@@ -597,7 +597,7 @@
                 <div class="row">
                     <div class="col-md-3">
                         <h2 class="section_title">
-                            <span class="reveal-trigger">Cilents</span><br>
+                            <span class="reveal-trigger">Clients</span><br>
                             <span class="reveal-trigger">Review</span>
                         </h2>
                     </div>
