--- a/projects/ligare_web_app.html
+++ b/projects/ligare_web_app.html
@@ -40,12 +40,12 @@
 
 <body class="project">
 <!-- begin of preloader -->
-<div class="preloader">
-    <div class="line_loader"></div>
-    <p>loading</p>
-</div>
-<div class="overlay2"></div>
-<div class="overlay"></div>
+<!--<div class="preloader">-->
+<!--    <div class="line_loader"></div>-->
+<!--    <p>loading</p>-->
+<!--</div>-->
+<!--<div class="overlay2"></div>-->
+<!--<div class="overlay"></div>-->
 <!-- end of preloader -->
 
 <!-- begin of main wrapper -->
@@ -88,12 +88,12 @@
     <!-- begin of project wrapper -->
     <div class="qrop_blogs section_single_padding">
         <div class="single_blog_details">
-            <img class="blog_single_img img-fluid w-100" src="../img/projects/ojirehprime/ojirehprime-intro.jpg" alt="">
+            <img class="blog_single_img img-fluid w-100" src="../img/projects/ligare-dashboard/ligare-dashboard-intro.jpg" alt="">
 
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12 col-md-12">
-                        <h2 class="single_blog_title mb-5">Ligare Website Interface Development</h2>
+                        <h2 class="single_blog_title mb-5">Ligare Logistics Web Application</h2>
                         <h4 class="mt-2"><span class="mbri-file overview-icon"></span>Overview</h4>
                     </div>
                 </div>
@@ -102,16 +102,16 @@
                         <h5 class="mb-3">The Problem</h5>
                         <div class="single_blog_details mb-3">
                             <p class="blog_text_head">DevCenter is a community in Nigeria that offers good connections
-                                between designer/developers and clients. DevCenter needed an official website for Ligare
-                                and had done the User Interface Design.
+                                between designer/developers and clients. DevCenter needed a web application for Ligare
+                                to solve logistics stats of Trucks, items and locations. They had done the User Interface Design.
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12">
                         <h5 class="mb-3">What I did</h5>
                         <div class="single_blog_details mb-3">
-                            <p class="blog_text_head">Developed the interface provided by the designer pixel for pixel.
-                                Responsive web design, writing codes to support a wide range of screen sizes.</p>
+                            <p class="blog_text_head">Developed the application dashboard interface provided by the designer pixel for pixel.
+                                Made use of HTML/CSS/SCSS and Angular.</p>
                         </div>
                     </div>
                 </div>
@@ -152,13 +152,13 @@
                             </div>
                             <div class="col-md-4">
                                 <h5>Platform</h5>
-                                <p>Web and Mobile Browser</p>
+                                <p>Web Browser</p>
                             </div>
                             <div class="col-md-4">
                                 <h5>Status</h5>
                                 <p>Completed</p>
                                 <p>
-                                    <a href="https://ligare-web.herokuapp.com" target="_blank"
+                                    <a href="https://www.ligareapp.com/login" target="_blank"
                                        class="btn btn-info"><span class="mbri-globe"></span></a>
                                 </p>
                             </div>
@@ -177,16 +177,14 @@
                     </div>
 
                     <div class="col-lg-6 col-md-6 mb-4 text-center">
-                        <p>Developed page interface pixel for pixel based on DevCenter's company <span
+                        <p>Developed dashboard application interface pixel for pixel based on DevCenter's company <span
                                 class="text-nowrap">User Interface Designs.</span> using Angular, HTML and CSS/SCSS</p>
 
                     </div>
 
-                    <div class="col-lg-12">
-                        <video controls autoplay loop>
-                            <source src="../img/projects/ligare-web/ligareweb-video-preview.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                    <div class="col-lg-12 text-center">
+                        <div style="font-size: 240px" class="mbri-lock text-primary"></div>
+                        <h2 class="mt-4">Project preview available on request</h2>
                     </div>
 
 
@@ -213,7 +211,7 @@
                             <div>
                                 <h5>Atque minima voluptate animi provident adipisci laudantium magni harum nulla.
                                     Consequuntur architecto aliquid distinctio doloribus molestiae facere dolorum.</h5>
-                                <p>Will Marvin <span>(Opticon Limited)</span></p>
+                                <p>Akinfals <span>(DevCenter)</span></p>
                             </div>
                             <p class="testimonial_quote mbri-quote-right"></p>
 
