--- a/projects/pallmax.html
+++ b/projects/pallmax.html
@@ -111,8 +111,9 @@
                         <h5 class="mb-3">What I did</h5>
                         <div class="single_blog_details mb-3">
                             <p class="blog_text_head">Worked with the Tunga Project Manager to understand the problem
-                                stated, user persona and how best to be used by the operations unit (System Administrator).
-                                Designed the web application using <b>Figma Design Tool</b> </p>
+                                stated, user persona and how best to be used by the operations unit (System
+                                Administrator).
+                                Designed the web application using <b>Figma Design Tool</b></p>
                         </div>
                     </div>
                 </div>
@@ -183,7 +184,9 @@
                     <div class="col-lg-12">
                         <!-- 16:9 aspect ratio -->
                         <div class="embed-responsive embed-responsive-4by3">
-                            <iframe style="border: none;" class="embed-responsive-item" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FQo5IhhMLGIJfDoGRwuhhwlUF%2FPallmax-Inventory-System%3Fnode-id%3D0%253A1%26viewport%3D-234%252C-448%252C0.552539050579071%26scaling%3Dscale-down-width" allowfullscreen></iframe>
+                            <iframe style="border: none;" class="embed-responsive-item"
+                                    src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FQo5IhhMLGIJfDoGRwuhhwlUF%2FPallmax-Inventory-System%3Fnode-id%3D0%253A1%26viewport%3D-234%252C-448%252C0.552539050579071%26scaling%3Dscale-down-width"
+                                    allowfullscreen></iframe>
                         </div>
                     </div>
 
@@ -200,7 +203,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="section_title">
-                        <span class="reveal-trigger">Cilent's</span><br>
+                        <span class="reveal-trigger">Client's</span><br>
                         <span class="reveal-trigger">Testimonial</span>
                     </h2>
                 </div>
@@ -209,10 +212,13 @@
                         <div class="testimonial_item d-flex">
                             <p class="testimonial_quote mbri-quote-left mr-3"></p>
                             <div>
-                                <h5>Atque minima voluptate animi provident adipisci laudantium magni harum nulla.
-                                    Consequuntur architecto aliquid distinctio doloribus molestiae facere dolorum.</h5>
-                                <p>Elijah <span>(Tunga Project Manager)</span></p>
+                                <h5>
+                                    "Eddieos takes to heart the need of end users and at the same time does his best to
+                                    interpret what the client provides to deliver meaningful UX designs"
+                                </h5>
+                                <p>Elijah Atuhaire <span>(Project Manager Tunga)</span></p>
                             </div>
+
                             <p class="testimonial_quote mbri-quote-right"></p>
 
                         </div>
