styles: owl carousel added to niluk project

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-6 develop">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="" href="img/projects/niluk/niluk-preview.png">
+                                    <a class="" href="projects/niluk.html">
                                         <img class="img-fluid" src="img/projects/niluk/niluk-preview.png"
                                              alt="">
                                     </a>
@@ -503,7 +503,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-6 research develop design">
                             <div class="work_single_item">
                                 <div class="work_image">
-                                    <a class="zoom_image" href="img/work_08.jpg">
+                                    <a class="zoom_image" href="img/projects/mentions/mentions-preview.png">
                                         <img class="img-fluid" src="img/projects/mentions/mentions-preview.png" alt="">
                                     </a>
                                 </div>
@@ -626,6 +626,12 @@
                                 "Eddieos takes to heart the need of end users and at the same time does his best to interpret what the client provides to deliver meaningful UX designs"
                             </h5>
                             <p>Elijah Atuhaire <span>(Project Manager Tunga)</span></p>
+                        </div>
+                        <div class="testimonial_item">
+                            <h5>
+                                "Eddieos takes to heart the need of end users and at the same time does his best to interpret what the client provides to deliver meaningful UX designs"
+                            </h5>
+                            <p>David <span>(GlossKode Tech)</span></p>
                         </div>
                     </div>
                 </div>
