--- a/projects/niluk.html
+++ b/projects/niluk.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Designer, Porfolio, Developer, Desingineer, HTML/CSS Specialist, PSD to HTML">
     <meta name="author" content="eddieos">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta meta name="viewport" content="width=device-width, user-scalable=no"/>
 
     <!-- favicon -->
     <link rel="icon" type="image/png" href="../img/favicon-eddieos.png"/>
@@ -37,6 +37,21 @@
     <!-- Responsive CSS -->
     <link rel="stylesheet" href="../css/responsive.css">
 </head>
+<style>
+    .owl-carousel .owl-dots.disabled, .owl-carousel .owl-nav.disabled {
+        display: block;
+    }
+
+    .phone-carousel .app-screen {
+        box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.07);
+        transform: scale(0.85);
+        transition: all 0.3s ease-in;
+    }
+
+    .owl-carousel .center .app-screen {
+        transform: scale(1);
+    }
+</style>
 
 <body class="project">
 <!-- begin of preloader -->
@@ -88,12 +103,12 @@
     <!-- begin of project wrapper -->
     <div class="qrop_blogs section_single_padding">
         <div class="single_blog_details">
-            <img class="blog_single_img img-fluid w-100" src="../img/projects/crusader/crusader-intro.jpg" alt="">
+            <img class="blog_single_img img-fluid w-100" src="../img/projects/niluk/nilku-intro.jpg" alt="">
 
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12 col-md-12">
-                        <h2 class="single_blog_title mb-5">CrusaderSterling Pension Mobile Application</h2>
+                        <h2 class="single_blog_title mb-5">Niluk Mobile Application</h2>
                         <h4 class="mt-2"><span class="mbri-file overview-icon"></span>Overview</h4>
                     </div>
                 </div>
@@ -101,22 +116,17 @@
                     <div class="col-lg-6 col-md-12">
                         <h5 class="mb-3">The Problem</h5>
                         <div class="single_blog_details mb-3">
-                            <p class="blog_text_head">Crusadersterling was in need of an <strong>Hybrid Mobile
-                                Application</strong> to
-                                serve their iOS and Android customers a good pension experience. There was an existing
-                                software working on just the Android platform, so there was a need to build a new app
-                                that supports both iOS and Android.
+                            <p class="blog_text_head">DevCenter is a community in Nigeria that offers good connections
+                                between designer/developers and clients. DevCenter needed an official website for Ligare
+                                and had done the User Interface Design.
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12">
                         <h5 class="mb-3">What I did</h5>
                         <div class="single_blog_details mb-3">
-                            <p class="blog_text_head">Worked with the business and development team in visualizing how
-                                the
-                                application should best work for customers. Designed wireframes based on the user
-                                stories provided by the business team. After approved wireframes, I joined the dev team
-                                in building the interface of the mobile app using Ionic Framework. </p>
+                            <p class="blog_text_head">Developed the interface provided by the designer pixel for pixel.
+                                Responsive web design, writing codes to support a wide range of screen sizes.</p>
                         </div>
                     </div>
                 </div>
@@ -125,12 +135,11 @@
                         <div class="row mb-3">
                             <div class="col-md-3">
                                 <h5>Services</h5>
-                                <p>UX Design</p>
-                                <p>Mobile App Dev</p>
+                                <p>User Interface Development</p>
                             </div>
                             <div class="col-md-3">
                                 <h5>Client</h5>
-                                <p>CrusaderSterling Pension</p>
+                                <p>GlossKode Technologies</p>
                             </div>
                             <div class="col-md-6">
                                 <h5>Team Members</h5>
@@ -154,21 +163,18 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <h5>Tech Stack</h5>
-                                <p>Balsamiq Wireframing, Ionic, HTML, CSS/SCSS</p>
+                                <p>React.js UI, HTML, CSS/SCSS</p>
                             </div>
                             <div class="col-md-4">
                                 <h5>Platform</h5>
-                                <p>iOS Mobile</p>
-                                <p>Android Mobile</p>
+                                <p>Web and Mobile Browser</p>
                             </div>
                             <div class="col-md-4">
                                 <h5>Status</h5>
-                                <p>Completed</p>
+                                <p>Beta Stage</p>
                                 <p>
-                                    <a href="https://play.google.com/store/apps/details?id=com.glosskode.crusader&hl=en"
-                                       target="_blank" class="btn btn-success"><span class="mbri-android"></span></a>
-                                    <a href="https://itunes.apple.com/ng/app/crusadersterling-pension/id1331644365?mt=8"
-                                       target="_blank" class="btn btn-dark"><span class="mbri-apple"></span></a>
+                                    <a href="https://niluk.app" target="_blank"
+                                       class="btn btn-info"><span class="mbri-globe"></span></a>
                                 </p>
                             </div>
                         </div>
@@ -181,22 +187,21 @@
                     <div class="col-lg-12 col-md-12 text-center">
                         <div class="mb-5">
                             <h4 class="mt-2 mb-3"><span class="mbri-image-gallery overview-icon"></span></h4>
-                            <h2 class="single_blog_title mb-3">Protoype/Wireframe</h2>
+                            <h2 class="single_blog_title mb-3">App Screenshots</h2>
                         </div>
                     </div>
 
                     <div class="col-lg-6 col-md-6 mb-4 text-center">
-                        <p>Created wireframe based on Client request on how the mobile application should function</p>
+                        <p>Developed page interface pixel for pixel based on Niluk's organisation <span
+                                class="text-nowrap">User Interface Designs.</span> using React.js, HTML and CSS/SCSS</p>
 
                     </div>
-
-                    <div class="col-lg-12">
-                        <img class="img-fluid w-100 mb-5 mb-sm-2 mb-lg-5" src="../img/projects/crusader/Mockup1.png"
-                             alt="">
-                        <img class="img-fluid w-100 mb-5 mb-sm-2 mb-lg-5" src="../img/projects/crusader/Mockup2.png"
-                             alt="">
-                        <img class="img-fluid w-100 mb-5 mb-sm-2 mb-lg-5" src="../img/projects/crusader/Mockup3.png"
-                             alt="">
+                    <div class="col-lg-10 m-auto">
+                        <div class="owl-carousel phone-carousel">
+                            <img class="app-screen img-fluid" src="../img/projects/niluk/screen1.jpg" alt="image">
+                            <img class="app-screen img-fluid" src="../img/projects/niluk/screen2.jpg" alt="image">
+                            <img class="app-screen img-fluid" src="../img/projects/niluk/screen3.jpg" alt="image">
+                        </div>
                     </div>
 
 
@@ -223,12 +228,13 @@
                             <div>
                                 <h5>Atque minima voluptate animi provident adipisci laudantium magni harum nulla.
                                     Consequuntur architecto aliquid distinctio doloribus molestiae facere dolorum.</h5>
-                                <p>David <span>(GlossKode Tech Solutions)</span></p>
+                                <p>Elena <span>(Niluk)</span></p>
                             </div>
                             <p class="testimonial_quote mbri-quote-right"></p>
 
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -270,6 +276,7 @@
 <script src="../js/plugins.js"></script>
 <!-- Main JS -->
 <script src="../js/main.js"></script>
+
 </body>
 
 </html>
