--- a/projects/pallmax.html
+++ b/projects/pallmax.html
@@ -198,7 +198,7 @@
     <!-- end of blogs wrapper -->
 
     <!-- begin of testimonials wrapper -->
-    <div id="qrop_testimonial" class="qrop_testimonial section_padding">
+    <div class="qrop_testimonial section_padding">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
