--- a/projects/ojirehprime.html
+++ b/projects/ojirehprime.html
@@ -134,11 +134,9 @@
                                         (U.I/U.X Developer)
                                     </small>
                                 </p>
-                                <p>Theophilus Omoregbee <a
-                                        href="https://www.linkedin.com/in/theophilus-omoregbee-4775ab53/"
-                                        target="_blank"><span class="mbri-link"></span></a><br>
+                                <p>OjirehPrime Team<br>
                                     <small>
-                                        (Full Stack Developer)
+                                        (Product Management)
                                     </small>
                                 </p>
                             </div>
@@ -152,14 +150,19 @@
                             </div>
                             <div class="col-md-4">
                                 <h5>Platform</h5>
-                                <p>Web and Mobile Browser</p>
+                                <p>iOS Mobile</p>
+                                <p>Android Mobile</p>
                             </div>
                             <div class="col-md-4">
                                 <h5>Status</h5>
-                                <p>Completed</p>
+                                <p>In development</p>
                                 <p>
-                                    <a href="https://ligare-web.herokuapp.com" target="_blank"
-                                       class="btn btn-info"><span class="mbri-globe"></span></a>
+                                    <a href="https://marvelapp.com/b64hd0h" target="_blank"
+                                       class="btn btn-outline-info"><span class="mbri-cursor-click"></span></a>
+                                    <a href="#"
+                                       target="_blank" class="btn btn-success"><span class="mbri-android"></span></a>
+                                    <a href="#"
+                                       target="_blank" class="btn btn-dark"><span class="mbri-apple"></span></a>
                                 </p>
                             </div>
                         </div>
@@ -172,21 +175,21 @@
                     <div class="col-lg-12 col-md-12 text-center">
                         <div class="mb-5">
                             <h4 class="mt-2 mb-3"><span class="mbri-image-gallery overview-icon"></span></h4>
-                            <h2 class="single_blog_title mb-3">Web Page Preview</h2>
+                            <h2 class="single_blog_title mb-3">Marvel App Interactive Prototype</h2>
                         </div>
                     </div>
 
                     <div class="col-lg-6 col-md-6 mb-4 text-center">
-                        <p>Developed page interface pixel for pixel based on DevCenter's company <span
-                                class="text-nowrap">User Interface Designs.</span> using Angular, HTML and CSS/SCSS</p>
+                        <p>Designed mobile application using SketchApp for Mac, then later exported to Marvel for quick
+                            prototype preview </p>
 
                     </div>
 
-                    <div class="col-lg-12">
-                        <video controls autoplay loop>
-                            <source src="../img/projects/ligare-web/ligareweb-video-preview.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+
+                    <div class="col-lg-12 text-center">
+
+                        <iframe src="https://marvelapp.com/b64hd0h?emb=1&iosapp=false&frameless=false" width="347"
+                                height="680" allowTransparency="true" frameborder="0"></iframe>
                     </div>
 
 
@@ -197,7 +200,7 @@
     <!-- end of blogs wrapper -->
 
     <!-- begin of testimonials wrapper -->
-    <div id="qrop_testimonial" class="qrop_testimonial section_padding">
+    <div class="qrop_testimonial section_padding">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
